--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "v-easy-ui",
-  "description": "vue easy ui",
-  "version": "0.3.5",
+  "name": "@linkorgs/v-easy-ui",
+  "description": "vue.js ui",
+  "version": "0.3.6",
   "license": "MIT",
   "private": false,
   "scripts": {
