--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@linkorgs/v-easy-ui": "^0.3.5",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
     "raw-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
     "v-easy-message": "^0.3.1"
   },
   "engines": {
