--- a/src/package.json
+++ b/src/package.json
@@ -51,6 +51,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Linkontoask/v-easy.git"
+    "url": "https://github.com/Linkontoask/v-easy-components.git"
   }
 }
