--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "v-easy-components",
+  "name": "v-easy-components-surroundings",
   "version": "0.4.0",
   "description": "Build v-easy-components with webpack",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --inline --progress --config config/webpack-dev-build-base.js",
-    "build": "webpack --mode production",
+    "build": "webpack --mode production --config config/webpack-dev-build-base.js",
     "build:cm": "webpack --mode production --config config/webpack-build-components.js"
   },
   "author": "",
@@ -49,7 +49,6 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "@linkorgs/v-easy-ui": "^0.3.5",
     "acorn": "^6.0.5",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -59,7 +58,7 @@
     "raw-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
-    "v-easy-message": "^0.3.1"
+    "v-easy-components": "^0.4.0"
   },
   "engines": {
     "node": ">= 6.0.0",
