--- a/package.json
+++ b/package.json
@@ -1,14 +1,36 @@
 {
-  "name": "v-easy-components-surroundings",
+  "name": "v-easy-components",
+  "description": "Vue.js UI Components",
   "version": "0.4.0",
-  "description": "Build v-easy-components with webpack",
-  "main": "app.js",
+  "main": "bin/index.js",
+  "files": [
+    "bin",
+    "style",
+    "lib",
+    "local",
+    "utils",
+    "mixins",
+    "types"
+  ],
+  "keywords": [
+    "Message",
+    "Vue",
+    "UI",
+    "Components",
+    "Link-ui"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Linkontoask/v-easy-components.git"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --inline --progress --config config/webpack-dev-build-base.js",
     "build": "webpack --mode production --config config/webpack-dev-build-base.js",
     "build:cm": "webpack --mode production --config config/webpack-build-components.js"
   },
+  "style": "bin/index.css",
+  "typings": "types/index.d.ts",
+  "unpkg": "bin/index.js",
   "author": "Link",
   "license": "MIT",
   "devDependencies": {
@@ -59,14 +81,5 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "v-easy-components": "^0.4.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
