--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "v-easy-components",
   "description": "Vue.js UI Components",
-  "version": "0.4.0",
-  "main": "bin/index.js",
+  "version": "0.5.1",
+  "main": "bin/v-easy-component.common.js",
   "files": [
     "bin",
     "style",
@@ -25,8 +25,9 @@
   },
   "scripts": {
     "start": "webpack-dev-server --inline --progress --config config/webpack-dev-build-base.js",
-    "build": "webpack --mode production --config config/webpack-dev-build-base.js",
-    "build:cm": "webpack --mode production --config config/webpack-build-components.js"
+    "build": "npm run clean && webpack --config config/webpack-dev-build-base.js && webpack --config config/webpack-common.js && webpack --config config/webpack-build-components.js",
+    "test": "webpack --config config/webpack-common.js",
+    "clean": "node config/clean.js"
   },
   "style": "bin/index.css",
   "typings": "types/index.d.ts",
@@ -40,22 +41,29 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.0.5",
-    "deepmerge": "^3.1.0",
+    "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "fs": "0.0.1-security",
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-notifier": "^5.4.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "path": "^0.12.7",
     "postcss": "^5.2.18",
     "postcss-loader": "^3.0.0",
     "postcss-salad": "^2.0.1",
-    "pug": "^2.0.3",
-    "pug-html-loader": "^1.1.5",
+    "progress-bar-webpack-plugin": "^1.12.1",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
     "ts-loader": "^6.0.3",
     "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
@@ -66,20 +74,12 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.34.0",
     "webpack-bundle-analyzer": ">=3.3.2",
-    "webpack-cli": "^3.3.4",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.3.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "acorn": "^6.0.5",
-    "css-loader": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "json-loader": "^0.5.7",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "path": "^0.12.7",
-    "raw-loader": "^3.0.0",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
-    "v-easy-components": "^0.4.0"
+    "deepmerge": "^3.1.0"
   }
 }
