--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "author": "Link",
   "license": "MIT",
   "devDependencies": {
+    "acorn": "^6.0.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.22.0",
