--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
   "author": "Link",
   "license": "MIT",
   "devDependencies": {
-    "acorn": "^6.0.5",
+    "acorn": "^6.3.0",
     "babel-core": "^6.26.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
@@ -57,17 +60,14 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-notifier": "^5.4.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
     "postcss": "^5.2.18",
     "postcss-loader": "^3.0.0",
     "postcss-salad": "^2.0.1",
     "progress-bar-webpack-plugin": "^1.12.1",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
     "ts-loader": "^6.0.3",
     "typescript": "^3.5.2",
-    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^2.0.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.7.0",
