--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-easy-components",
   "description": "Vue.js UI Components",
-  "version": "0.5.10",
+  "version": "0.5.11",
   "main": "bin/v-easy-component.common.js",
   "files": [
     "bin",
@@ -25,10 +25,11 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config config/webpack-dev-config.js",
-    "build": "npm run clean && npm run build:main && npm run build:cm && npm run build:common",
+    "build": "npm run clean && npm run build:main && npm run build:cm && npm run build:common && npm run build:theme",
     "build:main": "webpack --config config/webpack-build-config.js",
     "build:cm": "webpack --config config/webpack-build-components.js",
     "build:common": "webpack --config config/webpack-common.js",
+    "build:theme": "gulp build --gulpfile src/theme-chalk/gulpfile.js && cp-cli src/theme-chalk/lib v-easy-components/bin/theme-chalk && rimraf v-easy-components/theme-chalk/lib",
     "test": "",
     "clean": "rimraf v-easy-components"
   },
@@ -39,6 +40,7 @@
   "license": "MIT",
   "devDependencies": {
     "acorn": "^6.3.0",
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.5",
@@ -51,12 +53,17 @@
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
+    "cp-cli": "^2.0.0",
     "cross-env": "^5.0.5",
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs": "0.0.1-security",
+    "gulp": "^4.0.2",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-less": "^4.0.1",
+    "gulp-postcss": "^8.0.0",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "less": "^3.8.1",
@@ -68,7 +75,9 @@
     "postcss-loader": "^3.0.0",
     "postcss-salad": "^2.0.1",
     "progress-bar-webpack-plugin": "^1.12.1",
+    "rimraf": "^3.0.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "latest",
     "ts-loader": "^6.0.3",
     "typescript": "^3.5.2",
     "url-loader": "^2.0.0",
@@ -81,9 +90,7 @@
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.7.2",
-    "rimraf": "^3.0.0",
-    "terser-webpack-plugin": "latest"
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "deepmerge": "^3.1.0"
