--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "url": "https://github.com/Linkontoask/v-easy-components.git"
   },
   "scripts": {
+    "bootstrap": "yarn || npm i",
     "dev": "webpack-dev-server --inline --progress --config config/webpack-dev-config.js",
     "build": "npm run clean && npm run build:main && npm run build:cm && npm run build:common && npm run build:theme",
     "build:main": "webpack --config config/webpack-build-config.js",
     "build:cm": "webpack --config config/webpack-build-components.js",
-    "build:common": "webpack --config config/webpack-common.js",
-    "build:theme": "gulp build --gulpfile src/theme-chalk/gulpfile.js && cp-cli src/theme-chalk/lib v-easy-components/bin/theme-chalk && rimraf v-easy-components/theme-chalk/lib",
+    "build:common": "webpack --config config/webpack-build-common.js",
+    "build:theme": "rimraf src/theme-chalk/lib && gulp build --gulpfile src/theme-chalk/gulpfile.js && cp-cli src/theme-chalk/lib v-easy-components/bin/theme-chalk && rimraf v-easy-components/theme-chalk/lib",
     "test": "",
     "clean": "rimraf v-easy-components"
   },
@@ -50,25 +51,20 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "cp-cli": "^2.0.0",
     "cross-env": "^5.0.5",
     "css-loader": "^3.2.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-cssmin": "^0.2.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "json-loader": "^0.5.7",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.7.0",
     "node-notifier": "^5.4.0",
     "path": "^0.12.7",
     "postcss": "^5.2.18",
