--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
     "allowJs": true
   },
   "files": ["src/ts/main.ts"],
-  "exclude": ["node_modules", "dist", "build", "mock"]
+  "include": ["src"]
 }
