--- a/components.json
+++ b/components.json
@@ -1,11 +1,11 @@
 {
-  "button": "./src/lib/button/index.js",
-  "input-ip": "./src/lib/input-ip/index.js",
-  "input-subnet": "./src/lib/input-subnet/index.js",
-  "input-plain": "./src/lib/input-plain/index.js",
-  "switch": "./src/lib/switch/index.js",
-  "message": "./src/lib/message/index.js",
-  "tool-tip": "./src/lib/tool-tip/index.js",
-  "loading-dom": "./src/lib/loading-dom/index.js",
-  "image-preview": "./src/lib/image-preview/index.js"
+  "button": "./packages/button/index.js",
+  "input-ip": "./packages/input-ip/index.js",
+  "input-subnet": "./packages/input-subnet/index.js",
+  "input-plain": "./packages/input-plain/index.js",
+  "switch": "./packages/switch/index.js",
+  "message": "./packages/message/index.js",
+  "tool-tip": "./packages/tool-tip/index.js",
+  "loading-dom": "./packages/loading-dom/index.js",
+  "image-preview": "./packages/image-preview/index.js"
 }
