remove package-lock.json 、 increase Uncompressed file 、upgrade babel

--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "v-easy-components",
   "description": "Vue.js UI Components",
   "version": "0.5.20",
-  "main": "bin/v-easy-components.common.js",
+  "main": "bin/v-easy-components.common.min.js",
   "files": [
     "bin",
-    "style",
-    "lib",
-    "local",
-    "utils",
-    "mixins",
+    "src",
     "types",
     "packages"
   ],
@@ -31,29 +27,25 @@
     "build:main": "webpack --config config/webpack-build-config.js",
     "build:cm": "webpack --config config/webpack-build-components.js",
     "build:common": "webpack --config config/webpack-build-common.js",
-    "build:theme": "rimraf src/theme-chalk/lib && gulp build --gulpfile src/theme-chalk/gulpfile.js && rimraf src/theme-chalk/lib/_font.css && cp-cli src/theme-chalk/lib v-easy-components/bin/theme-chalk && rimraf v-easy-components/theme-chalk/lib",
+    "build:theme": "rimraf src/theme-chalk/lib && gulp build --gulpfile src/theme-chalk/gulpfile.js && rimraf src/theme-chalk/lib/_font.css && cp-cli src/theme-chalk/lib bin/theme-chalk && rimraf bin/theme-chalk/lib",
     "test": "",
-    "clean": "rimraf v-easy-components"
+    "clean": "rimraf bin"
   },
   "style": "bin/index.css",
   "typings": "types/index.d.ts",
-  "unpkg": "bin/index.js",
+  "unpkg": "bin/index.min.js",
   "author": "Link",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.3",
     "acorn": "^6.3.0",
     "autoprefixer": "^9.6.1",
-    "babel-core": "^6.26.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
+    "babel-loader": "^8.0.6",
+    "core-js": "3",
     "cp-cli": "^2.0.0",
     "cross-env": "^5.0.5",
     "css-loader": "^3.2.0",
@@ -91,6 +83,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.6.3",
     "deepmerge": "^3.1.0"
   },
   "peerDependencies": {
