--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,23 @@
 {
   "presets": [
-    ["env", {
-      "modules": "commonjs",
-      "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "targets": {
+          "ie": 9,
+          "browsers": [
+            "> 1%",
+            "last 2 versions",
+            "not ie <= 8"
+          ]
+        }
       }
-    }],
-    "stage-2"
+    ]
   ],
-  "plugins": ["transform-runtime", "transform-vue-jsx"]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-optional-chaining"
+  ]
 }
