--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,13 @@
     "sourceMap": true,
     "allowJs": true
   },
-  "files": ["src/ts/main.ts"],
-  "include": ["src"]
+  "files": [
+    "types/index.d.ts"
+  ],
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
