--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "vue": "^2.6.10",
     "vue-i18n": "^8.7.0",
     "vue-loader": "^15.7.0",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.34.0",
     "webpack-bundle-analyzer": ">=3.3.2",
