--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run test:commit",
-      "pre-push": "echo none"
+      "pre-push": "echo 'No specification'"
     }
   },
   "style": "bin/index.css",
