feat: Tool-tip Add autoRemoveTip attribute
When the DOM element bound by the tool-tip is removed, the corresponding TIP instance will also be removed.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-easy-components",
   "description": "Vue.js UI Components",
-  "version": "0.5.21",
+  "version": "0.5.21-beta.0",
   "main": "bin/v-easy-components.common.min.js",
   "files": [
     "bin",
