--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build:cm": "webpack --config config/webpack-build-components.js",
     "build:common": "webpack --config config/webpack-build-common.js",
     "build:theme": "rimraf src/theme-chalk/lib && gulp build --gulpfile src/theme-chalk/gulpfile.js && rimraf src/theme-chalk/lib/_font.css && cp-cli src/theme-chalk/lib bin/theme-chalk && rimraf bin/theme-chalk/lib",
-    "test": "",
+    "test": "eslint",
     "clean": "rimraf bin",
     "test:commit": "validate-commit-msg",
     "change:log": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
@@ -52,11 +52,14 @@
     "@babel/preset-env": "^7.6.3",
     "acorn": "^6.3.0",
     "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "conventional-changelog-cli": "^2.0.25",
     "cp-cli": "^2.0.0",
     "cross-env": "^5.0.5",
     "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-loader": "^3.0.2",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gulp": "^4.0.2",
@@ -94,8 +97,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.3",
-    "deepmerge": "^3.1.0",
-    "core-js": "3"
+    "core-js": "3",
+    "deepmerge": "^3.1.0"
   },
   "peerDependencies": {
     "vue": "^2.6.10"
