--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-easy-components",
   "description": "Vue.js UI Components",
-  "version": "0.6.1-beta.3",
+  "version": "0.6.1-beta.4",
   "main": "bin/v-easy-components.common.min.js",
   "files": [
     "bin",
@@ -10,11 +10,10 @@
     "packages"
   ],
   "keywords": [
-    "Message",
     "Vue",
     "UI",
-    "Components",
-    "Link-ui"
+    "tools",
+    "Components"
   ],
   "repository": {
     "type": "git",
