feat: add steps and add button loading status

--- a/components.json
+++ b/components.json
@@ -7,5 +7,6 @@
   "message": "./packages/message/index.js",
   "tool-tip": "./packages/tool-tip/index.js",
   "loading-dom": "./packages/loading-dom/index.js",
-  "image-preview": "./packages/image-preview/index.js"
+  "image-preview": "./packages/image-preview/index.js",
+  "steps": "./packages/steps/index.js"
 }
