--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-easy-components",
   "description": "Vue.js UI Components",
-  "version": "0.7.0-beta.0",
+  "version": "0.7.0-beta.1",
   "main": "index.js",
   "files": [
     "lib",
@@ -100,7 +100,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.3",
-    "core-js": "3.4.1",
+    "@babel/runtime-corejs3": "^7.7.4",
+    "core-js": "3",
     "deepmerge": "^3.1.0"
   },
   "peerDependencies": {
