--- a/.babelrc
+++ b/.babelrc
@@ -4,22 +4,14 @@
       "@babel/preset-env",
       {
         "useBuiltIns": "usage",
-        "corejs": 3,
-        "targets": {
-          "ie": 9,
-          "browsers": [
-            "> 1%",
-            "last 2 versions",
-            "not ie <= 8"
-          ]
+        "corejs": {
+          "version": 2,
+          "proposals": true
         }
       }
     ]
   ],
   "plugins": [
-    ["@babel/transform-runtime", {
-      "corejs": 3
-    }],
     "@babel/proposal-optional-chaining"
   ]
 }
