--- a/components.json
+++ b/components.json
@@ -9,5 +9,6 @@
   "loading-dom": "./packages/loading-dom/index.js",
   "image-preview": "./packages/image-preview/index.js",
   "steps": "./packages/steps/index.js",
-  "icon": "./packages/icon/index.js"
+  "icon": "./packages/icon/index.js",
+  "color-picker": "./packages/color-picker/index.js"
 }
