--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,17 +5,18 @@
     "node": true
   },
   "extends": [
-    "eslint:recommended"
+    "plugin:vue/recommended"
   ],
   "globals": {
 
   },
-  "parser": "babel-eslint",
   "parserOptions": {
+    "parser": "babel-eslint",
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "plugins": [
+    "vue"
   ],
   "rules": {
     "no-useless-escape": 0,
