--- a/.eslintrc
+++ b/.eslintrc
@@ -19,8 +19,8 @@
     "vue"
   ],
   "rules": {
-    "no-useless-escape": 0,
-    "no-prototype-builtins": 0,
-    "no-console": 2
+    "no-useless-escape": "off",
+    "no-prototype-builtins": "off",
+    "no-console": "error"
   }
 }
