test: basic test file and change component name

--- a/.babelrc
+++ b/.babelrc
@@ -13,5 +13,10 @@
   ],
   "plugins": [
     "@babel/proposal-optional-chaining"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["istanbul"]
+    }
+  }
 }
