--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build:common": "webpack --config config/webpack-build-common.js",
     "build:theme": "rimraf src/theme-chalk/lib && gulp build --gulpfile src/theme-chalk/gulpfile.js && rimraf src/theme-chalk/lib/_font.css && cp-cli src/theme-chalk/lib lib/theme-chalk && rimraf lib/theme-chalk/lib",
     "lint": "eslint config/* packages/**/* src/**/*.js test/**/*.js  --quiet",
-    "test": "npm run lint && karma start test/karma.conf.js --single-run",
-    "test:watch": "npm run lint && karma start test/karma.conf.js",
+    "test": "npm run lint && cross-env CI_ENV=/dev/ BABEL_ENV=test karma start test/karma.conf.js --single-run",
+    "test:watch": "npm run lint && cross-env BABEL_ENV=test karma start test/karma.conf.js",
     "clean": "rimraf lib",
     "validate:commit": "validate-commit-msg",
     "change:log": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -64,11 +64,12 @@
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-istanbul": "^5.2.0",
     "babel-regenerator-runtime": "^6.5.0",
     "chai": "^4.2.0",
     "conventional-changelog-cli": "^2.0.25",
     "cp-cli": "^2.0.0",
-    "cross-env": "^5.0.5",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "eslint": "^6.7.2",
     "eslint-loader": "^3.0.2",
