--- a/components.json
+++ b/components.json
@@ -2,11 +2,11 @@
   "button": "./packages/button/index.js",
   "input-ip": "./packages/input-ip/index.js",
   "input-subnet": "./packages/input-subnet/index.js",
-  "input-plain": "./packages/input-plain/index.js",
+  "input-plain": "./packages/input/index.js",
   "switch": "./packages/switch/index.js",
   "message": "./packages/message/index.js",
   "tool-tip": "./packages/tool-tip/index.js",
-  "loading-dom": "./packages/loading-dom/index.js",
+  "loading-dom": "./packages/skeleton/index.js",
   "image-preview": "./packages/image-preview/index.js",
   "steps": "./packages/steps/index.js",
   "icon": "./packages/icon/index.js",
