--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-easy-components",
   "description": "Vue.js UI Components",
-  "version": "0.9.1-beta.1",
+  "version": "0.9.1",
   "main": "index.js",
   "files": [
     "lib",
