--- a/.eslintrc
+++ b/.eslintrc
@@ -5,11 +5,9 @@
     "node": true
   },
   "extends": [
-    "plugin:vue/recommended"
+    "plugin:vue/recommended",
+    "eslint:recommended"
   ],
-  "globals": {
-
-  },
   "parserOptions": {
     "parser": "babel-eslint",
     "ecmaVersion": 2018,
