--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
   - node
 before_install:
-  - openssl aes-256-cbc -K $encrypted_cefdef829077_key -iv $encrypted_cefdef829077_iv
-    -in id_rsa.enc -out ~/.ssh/id_rsa -d
+  - openssl aes-256-cbc -K $encrypted_3ad82f112fed_key -iv $encrypted_3ad82f112fed_iv
+    -in id_rsa.enc -out ~\/.ssh/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
 install:
   - npm install
