--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "env": {
     "browser": true,
     "es6": true,
@@ -6,8 +7,9 @@
   },
   "extends": [
     "plugin:vue/recommended",
-    "eslint:recommended"
+    "plugin:prettier/recommended"
   ],
+  "parser": "vue-eslint-parser",
   "parserOptions": {
     "parser": "babel-eslint",
     "ecmaVersion": 2018,
@@ -19,6 +21,11 @@
   "rules": {
     "no-useless-escape": "off",
     "no-prototype-builtins": "off",
-    "no-console": "error"
+    "no-console": "error",
+    "vue/max-attributes-per-line": "off",
+    "vue/require-default-prop": "off",
+    "vue/html-self-closing": "off",
+    "vue/require-prop-types": "off",
+    "vue/singleline-html-element-content-newline": "off"
   }
 }
