--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "bootstrap": "yarn || npm i",
     "dev": "webpack-dev-server --config config/webpack-dev-config.js",
     "dev:docs": "vuepress dev docs",
-    "build": "npm run clean && npm run build:main && npm run build:cm && npm run build:common && npm run build:theme",
+    "build": "npm run clean && npm run lint && npm run build:main && npm run build:cm && npm run build:common && npm run build:theme",
     "build:main": "webpack --config config/webpack-build-config.js",
     "build:cm": "webpack --config config/webpack-build-components.js",
     "build:common": "webpack --config config/webpack-build-common.js",
     "build:theme": "rimraf src/theme-chalk/lib && gulp build --gulpfile src/theme-chalk/gulpfile.js && rimraf src/theme-chalk/lib/_font.css && cp-cli src/theme-chalk/lib lib/theme-chalk && rimraf lib/theme-chalk/lib",
     "build:docs": "vuepress build docs",
-    "lint": "eslint \"config/*.js\" \"packages/**/*\" \"src/**/*.js\" \"test/**/*.js\"  --quiet",
+    "lint": "eslint \"packages/**/*\" \"src/**/*.js\" --quiet",
     "test": "npm run lint && cross-env CI_ENV=/dev/ BABEL_ENV=test karma start test/karma.conf.js --single-run",
     "test:watch": "npm run lint && cross-env BABEL_ENV=test karma start test/karma.conf.js",
     "clean": "rimraf lib",
@@ -41,11 +41,6 @@
     "hooks": {
       "pre-commit": "npm run validate:commit && npm run lint"
     }
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "printWidth": 80
   },
   "homepage": "https://linkorg.club",
   "bugs": {
@@ -61,6 +56,9 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
+    "@vuepress/plugin-back-to-top": "^1.2.0",
+    "@vuepress/plugin-google-analytics": "^1.2.0",
+    "@vuepress/plugin-pwa": "^1.2.0",
     "acorn": "^6.3.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
@@ -73,7 +71,9 @@
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^3.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.0.1",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -94,6 +94,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mocha": "^6.2.2",
+    "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "postcss": "^5.2.18",
     "postcss-loader": "^3.0.0",
@@ -101,6 +102,7 @@
     "prettier": "^1.19.1",
     "progress-bar-webpack-plugin": "^1.12.1",
     "rimraf": "^3.0.0",
+    "sass-loader": "^7.2.0",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "style-loader": "^0.23.1",
@@ -114,17 +116,12 @@
     "vue-loader": "^15.7.0",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10",
+    "vuepress": "1.2.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.7.2",
-    "vuepress": "1.2.0",
-    "@vuepress/plugin-back-to-top": "^1.2.0",
-    "@vuepress/plugin-google-analytics": "^1.2.0",
-    "@vuepress/plugin-pwa": "^1.2.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.2.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "core-js": "2",
