--- a/components.json
+++ b/components.json
@@ -10,5 +10,8 @@
   "image-preview": "./packages/image-preview/index.js",
   "steps": "./packages/steps/index.js",
   "icon": "./packages/icon/index.js",
-  "color-picker": "./packages/color-picker/index.js"
+  "color-picker": "./packages/color-picker/index.js",
+  "scroll-bar": "./packages/scroll-bar/index.js",
+  "route-indicator": "./packages/route-indicator/index.js",
+  "collapse": "./packages/collapse/index.js"
 }
