fix: route-indicator name component

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "clean": "rimraf lib",
     "validate:commit": "validate-commit-msg",
     "change:log": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "prettier": "prettier --write packages/**/*.vue packages/**/*.js"
+    "prettier": "prettier --write packages/**/*.vue packages/**/*.js example/**"
   },
   "husky": {
     "hooks": {
