feat: v-image support fullscreen and stop e

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,8 @@ deploy:
     tags: false
     branch: master
     repo: Linkontoask/v-easy-components
+notifications:
+  slack:
+    if: branch = docs
+  email:
+    - linkorgs@163.com
