--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "core-js": "2",
+    "core-js": "^3.6.5",
     "deepmerge": "^3.1.0",
     "popper.js": "^1.16.0",
     "regenerator-runtime": "^0.13.3"
