--- a/.vcmrc
+++ b/.vcmrc
@@ -1,5 +1,5 @@
 {
-  "types": ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"],
+  "types": ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert", "webpack"],
   "scope": {
     "required": false,
     "allowed": ["*"],
