--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,8 @@
     ]
   ],
   "plugins": [
-    "@babel/proposal-optional-chaining"
+    "@babel/proposal-optional-chaining",
+    "@babel/proposal-nullish-coalescing-operator"
   ],
   "env": {
     "test": {
