--- a/.eslintrc
+++ b/.eslintrc
@@ -5,19 +5,15 @@
     "es6": true,
     "node": true
   },
-  "extends": [
-    "plugin:vue/recommended",
-    "plugin:prettier/recommended"
-  ],
-  "parser": "vue-eslint-parser",
+  "extends": ["plugin:vue/recommended", "plugin:prettier/recommended"],
   "parserOptions": {
-    "parser": "babel-eslint",
+    "parser": "@typescript-eslint/parser",
+    "project": "./tsconfig.json",
+    "extraFileExtensions": [".vue"],
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "vue"
-  ],
+  "plugins": ["vue", "babel", "@typescript-eslint"],
   "rules": {
     "no-useless-escape": "off",
     "no-prototype-builtins": "off",
