--- a/package.json
+++ b/package.json
@@ -52,9 +52,13 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "@vue/compiler-sfc": "^3.0.0-rc.9",
     "@vuepress/plugin-back-to-top": "^1.2.0",
     "@vuepress/plugin-google-analytics": "^1.2.0",
     "@vuepress/plugin-pwa": "^1.2.0",
@@ -72,6 +76,7 @@
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^3.0.2",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.0.1",
     "file-loader": "^1.1.11",
@@ -93,6 +98,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mocha": "^6.2.2",
+    "node-notifier": "^7.0.2",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "postcss": "^5.2.18",
@@ -106,15 +112,14 @@
     "sinon-chai": "^3.3.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "2.2.2",
-    "ts-loader": "^6.0.3",
-    "typescript": "^3.5.2",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
     "url-loader": "^2.0.0",
     "validate-commit-msg": "^2.14.0",
-    "vue": "^2.6.10",
-    "vue-i18n": "^8.7.0",
-    "vue-loader": "^15.7.0",
-    "vue-router": "^3.1.3",
-    "vue-template-compiler": "^2.6.10",
+    "vue": "3.0.0-rc.9",
+    "vue-i18n": "^9.0.0-alpha.16",
+    "vue-loader": "^16.0.0-beta.4",
+    "vue-router": "^4.0.0-beta.4",
     "vuepress": "1.2.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.5",
@@ -129,6 +134,6 @@
     "regenerator-runtime": "^0.13.3"
   },
   "peerDependencies": {
-    "vue": "^2.6.10"
+    "vue": "^3.0.0-rc.9"
   }
 }
