--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,26 @@
 {
   "compilerOptions": {
-    "module": "UMD",
-    "target": "es5",
-    "sourceMap": true,
-    "allowJs": true
+    "module": "esnext",
+    "outDir": "dist",
+    "target": "es2019",
+    "sourceMap": false,
+    "allowJs": true,
+    "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "removeComments": false,
+    "baseUrl": ".",
+    "lib": ["esnext", "dom"],
+    "rootDir": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@packages/*": ["packages/*"],
+      "lib/*": ["lib"]
+    }
   },
-  "files": [
-    "types/index.d.ts"
-  ],
-  "include": [
-    "types"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "files": ["./types/index.d.ts"],
+  "include": ["./packages/**/*", "./src/**/*", "./types/**/*"],
+  "exclude": ["node_modules"]
 }
