feat: Some components support vue-next

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "bootstrap": "yarn || npm i",
-    "dev": "webpack-dev-server --config config/webpack-dev-config.js",
+    "dev": "webpack-dev-server --config config/webpack-dev-config.js --open",
     "dev:docs": "vuepress dev docs",
     "build": "npm run clean && npm run lint && npm run build:main && npm run build:cm && npm run build:common && npm run build:theme && rimraf dist/index.min.js.LICENSE",
     "build:main": "webpack --config config/webpack-build-config.js",
@@ -65,7 +65,7 @@
     "acorn": "^6.3.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^5.2.0",
     "babel-regenerator-runtime": "^6.5.0",
     "chai": "^4.2.0",
@@ -75,17 +75,16 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-loader": "^3.0.2",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.0.1",
-    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gulp": "^4.0.2",
     "gulp-cssmin": "^0.2.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.4.1",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "karma": "^4.4.1",
@@ -114,18 +113,18 @@
     "terser-webpack-plugin": "2.2.2",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
-    "url-loader": "^2.0.0",
+    "url-loader": "^4.1.0",
     "validate-commit-msg": "^2.14.0",
     "vue": "3.0.0-rc.9",
     "vue-i18n": "^9.0.0-alpha.16",
     "vue-loader": "^16.0.0-beta.4",
     "vue-router": "^4.0.0-beta.4",
     "vuepress": "1.2.0",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.3.1",
+    "webpack": "^5.0.0-beta.29",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
     "core-js": "^3.6.5",
