--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "vue/require-default-prop": "off",
     "vue/html-self-closing": "off",
     "vue/require-prop-types": "off",
-    "vue/singleline-html-element-content-newline": "off"
+    "vue/singleline-html-element-content-newline": "off",
+    "vue/no-v-model-argument": "off"
   }
 }
