--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
     "validate-commit-msg": "^2.14.0",
-    "vue": "3.0.0-rc.9",
+    "vue": "^3.0.0-rc.10",
     "vue-i18n": "^9.0.0-alpha.16",
     "vue-loader": "^16.0.0-beta.4",
     "vue-router": "^4.0.0-beta.4",
@@ -133,6 +133,6 @@
     "regenerator-runtime": "^0.13.3"
   },
   "peerDependencies": {
-    "vue": "^3.0.0-rc.9"
+    "vue": "^3.0.0-rc.10"
   }
 }
