feat: Support Message

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
   },
   "files": ["./types/index.d.ts"],
   "include": ["./packages/**/*", "./src/**/*", "./types/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "config"]
 }
