fix: Solve the type inference of Message component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "lib": ["esnext", "dom"],
     "rootDir": ".",
     "paths": {
+      "root/*": ["/*"],
       "@/*": ["src/*"],
       "@packages/*": ["packages/*"],
       "lib/*": ["lib"]
